# CLL

./: .gitignore  CLL.sln  CMakeLists.txt  LICENSE  README.md  appveyor.yml
CLL/: CLL.vcxproj  CLL.vcxproj.filters  CMakeLists.txt  README.md
CLL/include/: CLL.hpp  defined.hpp  functions.hpp  interpreter.hpp  lexer.hpp  static.hpp
CLL/include/functions/: file.hpp  header.hpp  math.hpp  rand.hpp  string.hpp  time.hpp  type.hpp
CLL/include/utils/: convert.hpp
CLL/src/: CLL.cpp  CLL.h  defined.cpp  functions.cpp  interpreter.cpp  lexer.cpp  var.cpp
CLL/src/cll/: defined.cpp  defined.h  functions.cpp  functions.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  static.h  var.cpp  var.h
CLL/src/cll/functions/: file.h  header.h  math.h  rand.h  string.h  time.h  type.h
CLL/src/cll/utils/: convert.h  search.h  strspn.h
Examples/: README.md
Examples/embedded/hello/: hello.cpp
Examples/scripts/prime numbers/: prime_naive.cll  prime_recursive.cll  prime_sieve.cll
Examples/scripts/unit tests/: test1.cll  test2.cll
Interpreter/: CMakeLists.txt  Interpreter.vcxproj  Interpreter.vcxproj.filters  README.md  delete_me.txt
Interpreter/src/: console.cpp  console.h  main.cpp
VisualStudioCode/: README.md
VisualStudioCode/cll-extension/: package.json
VisualStudioCode/cll-extension/syntaxes/: cll.tmLanguage.json
